# UNIGE-TASI-path-planners

./: .gitignore  .gitmodules  CMakeLists.rtems.txt  CMakeLists.txt  FieldDPlanner.cpp  FieldDPlanner.h  Graph.cpp  Map.h  Node.cpp  NodeUtils.hpp  PriorityQueue.h  README.md  dbgfile_0.json  interpolation.cpp  interpolation.h  logfile_0.json  main.cpp  plot_path.py
.github/workflows/: c-cpp.yml
DynamicFastMarching/: .gitignore  CMakeLists.rtems.txt  CMakeLists.txt  DirectLinearInterpolationPathExtractorCells.h  DirectLinearInterpolationPathExtractorCells_impl.h  DynamicFastMarching.cpp  DynamicFastMarching.h  DynamicFastMarching_impl.h  main.cpp  main.rtems.cpp
DynamicFastMarching/include/: DynamicFastMarching.h
DynamicFastMarching/python/: CMakeLists.txt  setup.py.in
DynamicFastMarching/python/simulator/: build_md_table.py  plot_path.py  run_simulator.py
DynamicFastMarching/src/: CMakeLists.txt  DynamicFastMarching.cpp  Graph.cpp  PriorityQueue.cpp  main.cpp
DynamicFastMarching/src/include/: DynamicFastMarching.h  Graph.h  PriorityQueue.h
FieldDStar/: CMakeLists.rtems.txt  CMakeLists.txt  FieldDPlanner.cpp  FieldDPlanner.h  FieldDPlanner_impl.h  Graph.cpp  LinearInterpolationPathExtractor.h  LinearInterpolationPathExtractor_impl.h  Node.cpp  PriorityQueue.cpp  interpolation.cpp  main.cpp  main.rtems.cpp  plot_path.py  plot_path_gui.py  run_simulator.py
FieldDStar/include/: FieldDPlanner.h  Graph.h  Map.h  Node.h  Pose.h  PriorityQueue.h  interpolation.h
FieldDStar/python/: CMakeLists.txt  setup.py.in
FieldDStar/python/simulator/: plot_path.py  plot_path_gui.py  run_simulator.py
FieldDStar/src/: CMakeLists.txt  FieldDPlanner.cpp  Graph.cpp  ShiftedGridPlanner.cpp  interpolation.cpp  main.cpp
FieldDStar/src/include/: FieldDPlanner.h  Graph.h  Pose.h  PriorityQueue.h  interpolation.h
PathExtraction/: LinearInterpolationPathExtractor.h  LinearInterpolationPathExtractor_impl.h
ProjectToolkit/: CMakeLists.txt  Cell.cpp  Graph.cpp  InterpolatedTraversal.cpp  Interpolation.cpp  LinearTraversalCostInterpolation.cpp  Macros.cpp  Node.cpp  Position.cpp  builtin_unreachable.cpp
ProjectToolkit/include/: Cell.h  ExpandedMap.h  Graph.h  InterpolatedTraversal.h  Interpolation.h  LinearTraversalCostInterpolation.h  Macros.h  Node.h  Position.h  PriorityQueue.h  ReplannerBase.h  builtin_unreachable.h  interpolation.h  planner_base.h
ProjectToolkit/include/impl/: ExpandedMap_impl.h  PriorityQueue_impl.h
ShiftedGridFastMarching/: CMakeLists.rtems.txt  CMakeLists.txt  DirectLinearInterpolationPathExtractor.h  DirectLinearInterpolationPathExtractor_impl.h  ShiftedGridPlanner.cpp  ShiftedGridPlanner.h  ShiftedGridPlanner_impl.h  main.cpp  main.rtems.cpp
ShiftedGridFastMarching/include/: ShiftedGridPlanner.h
ShiftedGridFastMarching/src/: CMakeLists.txt  ShiftedGridPlanner.cpp  main.cpp
ShiftedGridFastMarching/src/include/: ShiftedGridPlanner.h
Simulator/: CMakeLists.txt  setup.py.in
Simulator/simulator/: plot_path.py  plot_path_gui.py  run_simulator.py
Tests/: .gitignore  run_test.py  run_test.sh  run_test__field_d_star.sh  run_test_serial.py
Tests/Planners/DFM/: CMakeLists.rtems.txt  CMakeLists.txt  main.cpp  main.rtems.cpp
Tests/Planners/FDSTAR/: CMakeLists.rtems.txt  CMakeLists.txt  main.cpp  main.rtems.cpp
Tests/Planners/SGDFM/: CMakeLists.rtems.txt  CMakeLists.txt  main.cpp  main.rtems.cpp
Tests/Results/noise-trap/: dbgfile__l0_c0_opt1.json  dbgfile__l0_c1_opt0.json  dbgfile__l1_c0_opt0.json  dbgfile__l1_c1_opt0.json  dbgfile__l1_c1_opt1.json  dbgfile__lookahead_off.json  dbgfile__lookahead_on.json  dbgfile__lookahead_on_optimized.json  infofile__l0_c0_opt0.json  infofile__l0_c0_opt1.json  infofile__l0_c1_opt0.json  infofile__l0_c1_opt1.json  infofile__l1_c0_opt0.json  infofile__l1_c0_opt1.json  infofile__l1_c1_opt0.json  infofile__l1_c1_opt1.json  logfile__l0_c0_opt0.json  logfile__l0_c0_opt1.json  logfile__l0_c1_opt1.json  logfile__l1_c0_opt0.json  logfile__l1_c0_opt1.json  logfile__l1_c1_opt0.json  logfile__l1_c1_opt1.json  logfile__lookahead_off.json  logfile__lookahead_off_optimized.json  logfile__lookahead_on.json  preview.md  readme.md
Tests/Results/square/: dbgfile__l0_c0_opt0.json  dbgfile__l0_c1_opt0.json  dbgfile__l0_c1_opt1.json  dbgfile__l1_c0_opt1.json  dbgfile__l1_c1_opt1.json  dbgfile__lookahead_off.json  dbgfile__lookahead_off_optimized.json  dbgfile__lookahead_on.json  infofile__l0_c0_opt0.json  infofile__l0_c0_opt1.json  infofile__l0_c1_opt0.json  infofile__l0_c1_opt1.json  infofile__l1_c0_opt0.json  infofile__l1_c0_opt1.json  infofile__l1_c1_opt0.json  infofile__l1_c1_opt1.json  logfile__l0_c0_opt0.json  logfile__l0_c0_opt1.json  logfile__l0_c1_opt0.json  logfile__l0_c1_opt1.json  logfile__l1_c0_opt0.json  logfile__l1_c1_opt0.json  logfile__lookahead_off.json  logfile__lookahead_on.json  logfile__lookahead_on_optimized.json  preview.md  readme.md
Tests/Results/wall-a/: dbgfile__l0_c0_opt0.json  dbgfile__l0_c1_opt0.json  dbgfile__l0_c1_opt1.json  dbgfile__l1_c0_opt1.json  dbgfile__l1_c1_opt0.json  dbgfile__l1_c1_opt1.json  dbgfile__lookahead_off.json  dbgfile__lookahead_off_optimized.json  dbgfile__lookahead_on.json  dbgfile__lookahead_on_optimized.json  infofile__l0_c0_opt0.json  infofile__l0_c0_opt1.json  infofile__l0_c1_opt0.json  infofile__l0_c1_opt1.json  infofile__l1_c0_opt0.json  infofile__l1_c0_opt1.json  infofile__l1_c1_opt0.json  infofile__l1_c1_opt1.json  logfile__l0_c0_opt0.json  logfile__l0_c0_opt1.json  logfile__l0_c1_opt0.json  logfile__l0_c1_opt1.json  logfile__l1_c0_opt1.json  logfile__l1_c1_opt0.json  logfile__l1_c1_opt1.json  logfile__lookahead_off.json  logfile__lookahead_off_optimized.json  logfile__lookahead_on.json  preview.md  readme.md
Tests/Results/wall-b/: dbgfile__l0_c0_opt0.json  dbgfile__l0_c1_opt1.json  dbgfile__l1_c0_opt1.json  dbgfile__l1_c1_opt0.json  dbgfile__lookahead_off.json  dbgfile__lookahead_off_optimized.json  dbgfile__lookahead_on.json  dbgfile__lookahead_on_optimized.json  infofile__l0_c0_opt0.json  infofile__l0_c0_opt1.json  infofile__l0_c1_opt0.json  (+18 more)
include/bitmap/: BMP.h
